[package]
name = "rsconfig-macros"
version = "0.1.1"
edition = "2021"
authors = ["HyperCodec"]
description = "Macros for RSCONFIG"
license = "MIT OR Apache-2.0"
keywords = ["config", "configuration", "macros"]
categories = ["command-line-utilities", "config", "filesystem"]
readme = "README.md"
repository = "https://github.com/HyperCodec/rsconfig-macros"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
rsconfig = "0.1"
quote = "1.0"
syn = "1.0"

yaml-rust = "0.4"
serde_json = "1.0"